<resources>
    <string name="app_name">Notebook</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shop_list">To-do list</string>
    <string name="new_item">New</string>
    <string name="save">Save</string>
    <string name="bold">Bold</string>
    <string name="colors">Colors</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="new_list_name">List name</string>
    <string name="list_name">List name</string>
    <string name="empty">Empty!</string>
    <string name="delete_alert">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_item">Do you want delete this item?</string>
    <string name="update">UPDATE</string>
    <string name="delete_list">Delete list</string>
    <string name="clear_list">Clear list</string>
    <string name="share_list">Share list</string>
    <string name="update_list_item">Update list</string>
    <string name="name">Name</string>
    <string name="item_info">Item info</string>
    <string name="share_by">Share by</string>
    <string name="general">General settings</string>
    <string name="chose_note_style">Chose note style</string>
    <string name="chose_theme">Chose theme</string>
    <string name="theme_settings">Theme settings</string>
    <string name="time_format">Time format</string>
    <string name="text_size_settings">Note text size settings</string>
    <string name="chose_text_size">Chose note text size</string>
    <string name="title_text_size">Title text size</string>
    <string name="content_text_size">Content text size</string>
    <string name="linear">Linear</string>
    <string name="grid">Grid</string>
    <string name="green_theme">Green theme</string>
    <string name="violet_theme">Violet theme</string>
</resources>