<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:icon="@drawable/ic_general"
        android:title="@string/general">

        <ListPreference
            android:defaultValue="linear"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:key="note_style_key"
            android:icon="@drawable/baseline_style_24"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_note_style" />
        <ListPreference
            android:defaultValue= "hh:mm:ss - yyyy/MM/dd"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:key="time_format_key"
            android:icon="@drawable/ic_time_format"
            app:useSimpleSummaryProvider="true"
            android:title="@string/time_format" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/theme_settings"
        app:icon="@drawable/ic_settings_theme">

        <ListPreference
            android:defaultValue="green"
            android:entries="@array/chose_theme_array"
            android:entryValues="@array/chose_theme_values"
            android:key="theme_key"
            android:icon="@drawable/ic_chose_theme"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_theme" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/text_size_settings"
        android:icon="@drawable/ic_text_settings"
        >

        <ListPreference
            android:defaultValue="16"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:icon="@drawable/ic_text_size"
            app:useSimpleSummaryProvider="true"
            android:key="title_size_key"
            android:title="@string/title_text_size" />
        <ListPreference
            android:defaultValue="12"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="content_size_key"
            android:icon="@drawable/ic_text_size"
            app:useSimpleSummaryProvider="true"
            android:title="@string/content_text_size" />
    </PreferenceCategory>
</PreferenceScreen>