<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
         <item
             android:title="@string/save"
             android:id="@+id/id_save"
             android:icon="@drawable/ic_save"
             android:orderInCategory="3"
             app:showAsAction="ifRoom"
         />
    <item
             android:title="@string/bold"
             android:id="@+id/id_bold"
             android:icon="@drawable/ic_bold"
             android:orderInCategory="2"
             app:showAsAction="ifRoom"
         />
    <item
        android:title="@string/colors"
        android:id="@+id/id_colors"
        android:icon="@drawable/ic_colors"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />
</menu>